calculator fix wrapping of server digits at lg screen width

--- a/templates/starlink/css/calculator.css
+++ b/templates/starlink/css/calculator.css
@@ -638,7 +638,7 @@ td.calcTdRangeNameText {
         width: 5.76%;
     }
     #slider-virtual-count-digits .slider-virtual-count-digit {
-        width: 10.65%;
+        width: 10.55%;
     }
     .minus {
         margin: 2px 0 2px 35px;
